--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-2 [“两会”和百年党庆前 中共整顿网络“乱象”](/articles/voa/1042527.md)
+
 3-2 [台学生及公民团体声援香港民主 批评港府及中共政治打压](/articles/voa/1042528.md)
 
 3-2 [遏阻中国动武 美军印太司令部报请国会加倍为“太平洋威慑计划”拨款](/articles/voa/1042529.md)
@@ -598,6 +600,4 @@
 2-19 [众院重提两党议案，禁止新疆奴役产品进口](/articles/voa/1042825.md)
 
 2-19 [美国多数地区面临严寒的暴风雪天气](/articles/voa/1042826.md)
-
-2-19 [时事大家谈: 美加联手推反任意拘押外国人宣言能否让北京就范？](/articles/voa/1042827.md)
 
