--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+3-2 [蚂蚁集团有限分享数据](/articles/ft/1045960.md)
+
 3-2 [可持续投资成为主流投资方式](/articles/ft/1045961.md)
 
 3-2 [Lex专栏：早该进行的恒生指数大洗牌](/articles/ft/1045962.md)
@@ -598,6 +600,4 @@
 1-18 [一周世界舆论聚焦：中国为何不反驳“美国是印太国家”的说法？](/articles/ft/1046258.md)
 
 1-18 [垄断的利与弊：市场经济学的视角](/articles/ft/1046259.md)
-
-1-18 [印尼因优先给社交媒体明星接种疫苗而遭批评](/articles/ft/1046260.md)
 
