--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+3-2 [迦纳总统成接种COVAX提供疫苗第一人 – 法国国际广播电台 - RFI](/articles/rfi/1033777.md)
+
+3-2 [威廉森表现优异  助鹈鹕击败爵士 – 法国国际广播电台 - RFI](/articles/rfi/1033778.md)
+
+3-2 [非裔女经理指控 亚马逊种族和性别歧视 – 法国国际广播电台 - RFI](/articles/rfi/1033779.md)
+
 3-2 [日本官房长官称中国海警舰“违反国际法”](/articles/rfi/1033780.md)
 
 3-2 [珍爱藻礁公投联署突破法定门坎八月台湾将就四大公投案举行投票](/articles/rfi/1033781.md)
@@ -594,10 +600,4 @@
 2-25 [老虎伍兹车祸右脚开刀打钢钉 当局排除酒驾可能 – 法国国际广播电台 - RFI](/articles/rfi/1034075.md)
 
 2-25 [脸书将投资10亿美元支持新闻业 捍卫在澳洲屏蔽新闻 – 法国国际广播电台 - RFI](/articles/rfi/1034076.md)
-
-2-25 [拜登签署行政命令因应晶片荒 誓不让关键产品短缺 – 法国国际广播电台 - RFI](/articles/rfi/1034077.md)
-
-2-25 [国际奥会评估4月底决定 东京奥运是否开放外国客 – 法国国际广播电台 - RFI](/articles/rfi/1034078.md)
-
-2-25 [美国中央情报局长人选：胜过中国将是美国国家安全的关键](/articles/rfi/1034079.md)
 
