--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+3-2 [白宫：将让缅甸暴力和政变责任方付出更大代价](/articles/dw/1043628.md)
+
+3-2 [新冠大流行终结有望？](/articles/dw/1043629.md)
+
+3-2 [芯片是如何成為了“數字時代的石油”？](/articles/dw/1043630.md)
+
 3-2 [美国贸易代表人选戴琪：审查制度是贸易壁垒](/articles/dw/1043631.md)
 
 3-2 [精神痛苦大 日本促中国停止对该国公民进行肛拭子检测](/articles/dw/1043632.md)
@@ -594,10 +600,4 @@
 2-13 [行骗纽约上流圈 德国假名媛获释](/articles/dw/1043926.md)
 
 2-13 [DW事实核查：是否有人因接种新冠疫苗而死亡？](/articles/dw/1043927.md)
-
-2-13 [失去英国 失去欧洲：CGTN在德国也遭停播](/articles/dw/1043928.md)
-
-2-12 [西巴尔干的疫苗接种：在无能与地缘政治之间](/articles/dw/1043929.md)
-
-2-12 [人权理事会召开缅甸特别会议 警告“全球都在看“](/articles/dw/1043930.md)
 
