--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+3-2 [人权律师江天勇刑满释放两周年仍被软禁](/articles/rfi/1033767.md)
+
+3-2 [中国申请国际专利件数再登龙头 扩大领先美国 – 法国国际广播电台 - RFI](/articles/rfi/1033768.md)
+
 3-2 [卡舒吉案：无国界记者在德投诉沙特王储反人类罪](/articles/rfi/1033769.md)
 
 3-2 [富豪矢言2030年前 全面生产纯电动车 – 法国国际广播电台 - RFI](/articles/rfi/1033770.md)
@@ -596,8 +600,4 @@
 2-25 [预约科兴系统迫爆额满](/articles/rfi/1034065.md)
 
 2-25 [女子信念杯国际女足 美全胜封后 – 法国国际广播电台 - RFI](/articles/rfi/1034066.md)
-
-2-25 [毅力号甜蜜点拍摄火星全景照 协助探究陨石坑 – 法国国际广播电台 - RFI](/articles/rfi/1034067.md)
-
-2-25 [火星探测车毅力号公布全景照 360度美景全收 – 法国国际广播电台 - RFI](/articles/rfi/1034068.md)
 
