--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,12 @@
 金融时报
 ------
 
+3-2 [郭树清：很担心国外金融市场的泡沫](/articles/ft/1045957.md)
+
+3-2 [别样春节之后，中国经济走向何方](/articles/ft/1045958.md)
+
+3-2 [蔚来警告：全球芯片短缺将冲击电动汽车行业](/articles/ft/1045959.md)
+
 3-2 [蚂蚁集团有限分享数据](/articles/ft/1045960.md)
 
 3-2 [可持续投资成为主流投资方式](/articles/ft/1045961.md)
@@ -594,10 +600,4 @@
 1-18 [文在寅呼吁疫情期间蓬勃发展的企业分享利润](/articles/ft/1046255.md)
 
 1-18 [新消费的迷思：下一个“奶与蜜之地”在哪里？](/articles/ft/1046256.md)
-
-1-18 [疫苗无法在近期内让人们重返办公室](/articles/ft/1046257.md)
-
-1-18 [一周世界舆论聚焦：中国为何不反驳“美国是印太国家”的说法？](/articles/ft/1046258.md)
-
-1-18 [垄断的利与弊：市场经济学的视角](/articles/ft/1046259.md)
 
