--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-2 [【404文库】AI财经社｜传外卖骑士联盟盟主被捕，曾质疑饿了么春节奖励忽悠骑手](/articles/cdt/385386.md)
+
 3-2 [【异闻观止】“赵婷的《无依之地》到底是不是黑中国的？听名字像是”](/articles/cdt/385392.md)
 
 3-2 [V2EX｜Rexxar：昨天在微信群指点江山，我被请喝茶了](/articles/cdt/385397.md)
@@ -598,6 +600,4 @@
 1-29 [36氪 | 千亿芯片大骗局](/articles/cdt/386453.md)
 
 1-29 [立场新闻 | 办海外港人杂志《如水》：连系全球港人，阻言论自由遭蚕食](/articles/cdt/386456.md)
-
-1-29 [【网络民议】乌合麒麟：今年的舆论环境将会更加凶险 而我会专职反美](/articles/cdt/386470.md)
 
