--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-3 [中国特色“法治”发威 “辣笔小球”电视认罪](/articles/voa/1042521.md)
+
+3-3 [中国暂停台湾菠萝输入 台陆委会称检疫应按两岸协议机制处理](/articles/voa/1042522.md)
+
 3-3 [北京释放信号：“港人治港”将被“爱国者治港”取代](/articles/voa/1042523.md)
 
 3-2 [分析：香港司法“中国化”，中共意在瓦解港人反抗意志](/articles/voa/1042524.md)
@@ -596,8 +600,4 @@
 2-19 [拜登政府全面推动疫苗接种计划](/articles/voa/1042819.md)
 
 2-19 [德州遭遇严寒天气 居民互助应对断电断水](/articles/voa/1042820.md)
-
-2-19 [白宫要义: 白宫：拜登将在周五G7峰会与各国领导人谈因应中国](/articles/voa/1042821.md)
-
-2-19 [美国宇航局“毅力号”探测器成功登陆火星](/articles/voa/1042822.md)
 
