--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+3-3 [“你今天凤梨了吗？” 美加驻台机构力挺北京拒绝进口的台湾凤梨](/articles/voa/1042514.md)
+
+3-3 [FBI局长：发生在国会大厦的骚乱是“国内恐怖主义”](/articles/voa/1042515.md)
+
+3-3 [去年美国各大城市针对亚裔美国人仇恨犯罪猛增150%](/articles/voa/1042516.md)
+
 3-3 [时事大家谈: 后疫情时代，中国与西方关系迎来拐点？](/articles/voa/1042517.md)
 
 3-3 [47名香港民主派颠覆政权首日马拉松审讯14小时 刘慧卿批法律界丑闻](/articles/voa/1042518.md)
@@ -594,10 +600,4 @@
 2-19 [民主党人推出雄心勃勃的移民改革方案](/articles/voa/1042812.md)
 
 2-19 [许颖婷：流亡者需扪心自问离开香港的意义](/articles/voa/1042813.md)
-
-2-19 [美众院两党议员联袂提议案 力推恢复台湾世卫观察员地位](/articles/voa/1042814.md)
-
-2-19 [秘鲁高官违规提前接种疫苗惹众怒](/articles/voa/1042815.md)
-
-2-19 [口罩供应仍存问题小城开放疫苗接种](/articles/voa/1042816.md)
 
