--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+3-3 [中国两会前瞻：习李这次会同调吗?](/articles/rfa/1046238.md)
+
+3-3 [江天勇获释两周年   仍被软禁无自由](/articles/rfa/1046239.md)
+
 3-3 [访谈旧金山缅甸民运人士：呼吁中国政府跟随国际主流](/articles/rfa/1046240.md)
 
 3-3 [加台举办首届女性企业家大会  进一步强化经贸](/articles/rfa/1046241.md)
@@ -596,8 +600,4 @@
 2-2 [郭飞雄妻呼吁帮助   美国务院在交涉中](/articles/rfa/1046536.md)
 
 2-2 [揭密拜登的中国政策智囊 (上) –  鹰派老将与新生代“中国通”](/articles/rfa/1046537.md)
-
-2-2 [持外国护照香港人需二选一     三十万加拿大居港公民权益受损](/articles/rfa/1046538.md)
-
-2-2 [欧洲疫苗荒 德国不排斥中国疫苗 匈牙利批准购买](/articles/rfa/1046539.md)
 
