--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-3 [习近平要求忠诚、热衷“斗争”   学者：回归毛时代](/articles/rfa/1046237.md)
+
 3-3 [中国两会前瞻：习李这次会同调吗?](/articles/rfa/1046238.md)
 
 3-3 [江天勇获释两周年   仍被软禁无自由](/articles/rfa/1046239.md)
@@ -598,6 +600,4 @@
 2-2 [缅甸政变 是美国踩空 中国得势？](/articles/rfa/1046535.md)
 
 2-2 [郭飞雄妻呼吁帮助   美国务院在交涉中](/articles/rfa/1046536.md)
-
-2-2 [揭密拜登的中国政策智囊 (上) –  鹰派老将与新生代“中国通”](/articles/rfa/1046537.md)
 
