--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-3 [美国默克药厂同意帮助生产强生新冠疫苗](/articles/voa/1042513.md)
+
 3-3 [“你今天凤梨了吗？” 美加驻台机构力挺北京拒绝进口的台湾凤梨](/articles/voa/1042514.md)
 
 3-3 [FBI局长：发生在国会大厦的骚乱是“国内恐怖主义”](/articles/voa/1042515.md)
@@ -598,6 +600,4 @@
 2-19 [抗议“霸凌”：脸书切断澳大利亚用户新闻链接 国际反弹不断加剧](/articles/voa/1042811.md)
 
 2-19 [民主党人推出雄心勃勃的移民改革方案](/articles/voa/1042812.md)
-
-2-19 [许颖婷：流亡者需扪心自问离开香港的意义](/articles/voa/1042813.md)
 
