--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+3-3 [多种因素导致美国的国际学生入学受到影响](/articles/voa/1042507.md)
+
+3-3 [疫苗接种系统漏洞多亟待协调匡正](/articles/voa/1042508.md)
+
+3-3 [两使节分庭抗礼：谁是缅甸驻联合国合法代表？](/articles/voa/1042509.md)
+
 3-3 [纽约市纪念新冠疫情爆发一周年](/articles/voa/1042510.md)
 
 3-3 [因华为议题短暂受阻后 美参议院确认雷蒙多出任商务部长](/articles/voa/1042511.md)
@@ -594,10 +600,4 @@
 2-19 [拜登对欧洲进行“视频访问” 呼吁盟友共同应对中俄挑战](/articles/voa/1042805.md)
 
 2-19 [缅甸抗议活动出现首个死亡 中枪女抗议者不治身亡](/articles/voa/1042806.md)
-
-2-19 [中国缺煤限电危机未解 专家：主要由国内政治因素所致](/articles/voa/1042807.md)
-
-2-19 [中国提升新闻发言人人数和级别以强化宣传平台](/articles/voa/1042808.md)
-
-2-19 [加拿大称对特朗普干预孟晚舟案的指责已无关紧要](/articles/voa/1042809.md)
 
