--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-3 [美军将领警告世界：尝尝被中国主宰的“滋味”](/articles/voa/1042504.md)
+
 3-3 [“疫苗外交”能否帮中国加大在巴尔干半岛的影响力](/articles/voa/1042505.md)
 
 3-3 [美国政府宣布制裁参与对纳瓦尔尼投毒的俄罗斯高官](/articles/voa/1042506.md)
@@ -598,6 +600,4 @@
 2-20 [美国国务卿布林肯声明全文：美国正式重新加入巴黎协定](/articles/voa/1042802.md)
 
 2-20 [台湾国安团队高层变动 邱国正任国防部长](/articles/voa/1042803.md)
-
-2-19 [中国称有4名军人在去年六月中印边境冲突中死亡](/articles/voa/1042804.md)
 
