--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+3-3 [自由亚洲 | 北京贵州等地异议人士遭控制 鲍彤被禁言](/articles/cdt/385380.md)
+
+3-3 [德国之声 | 德语媒体：每况愈下的中国新闻环境](/articles/cdt/385381.md)
+
 3-3 [北同文化 | 被学校劝退的17岁同性恋：我只是想为我们的群体发声](/articles/cdt/385382.md)
 
 3-2 [【404文库】AI财经社｜传外卖骑士联盟盟主被捕，曾质疑饿了么春节奖励忽悠骑手](/articles/cdt/385386.md)
@@ -596,8 +600,4 @@
 1-29 [萧功秦 | 从“天津教案”看新冠病毒阴谋论](/articles/cdt/386446.md)
 
 1-29 [全现在｜唐映红：在严密的监视下成长为巨婴：高中生还怎样拥有明亮的未来？](/articles/cdt/386447.md)
-
-1-29 [【网络民议】注重学生“阳刚之气”培养 “ 防止男性青少年女性化”](/articles/cdt/386452.md)
-
-1-29 [36氪 | 千亿芯片大骗局](/articles/cdt/386453.md)
 
