--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+3-3 [疫苗护照，新冠时代的下一个政治冲突引爆点？](/articles/nyt/1047125.md)
+
+3-3 [《爱的工厂》：在中国成为明星主播](/articles/nyt/1047126.md)
+
 3-3 [简报：中国疫苗接种进展缓慢；美国对俄罗斯发起新制裁](/articles/nyt/1047127.md)
 
 3-2 [监控无人机、黑客软件：缅甸军方镇压行动的数字武器库](/articles/nyt/1047128.md)
@@ -596,8 +600,4 @@
 12-17 [简报：中国正式封杀澳大利亚煤炭；嫦娥五号成功返回地球](/articles/nyt/1047423.md)
 
 12-16 [麦当劳鸡块和“我爱你”](/articles/nyt/1047424.md)
-
-12-16 [2020年的抗议运动教会了我们什么](/articles/nyt/1047425.md)
-
-12-16 [足不出户行天下：假装在东京](/articles/nyt/1047426.md)
 
