--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+3-3 [调查：澳大利亚华人对民主的支持率较低](/articles/ft/1045954.md)
+
+3-3 [拜登：美国到5月底将有足够疫苗为每个成年人接种](/articles/ft/1045955.md)
+
 3-3 [TikTok如果撤离印度将意味着什么？](/articles/ft/1045956.md)
 
 3-2 [郭树清：很担心国外金融市场的泡沫](/articles/ft/1045957.md)
@@ -596,8 +600,4 @@
 1-19 [谭德塞：全球疫苗分配面临“灾难性道德失败”](/articles/ft/1046252.md)
 
 1-18 [三星掌门人李在镕重新入狱](/articles/ft/1046253.md)
-
-1-18 [率先进入自动驾驶时代的无人机](/articles/ft/1046254.md)
-
-1-18 [文在寅呼吁疫情期间蓬勃发展的企业分享利润](/articles/ft/1046255.md)
 
