--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-3 [寻找新冠源头 科学家：是时候对武汉病毒所进行独立调查了](/articles/voa/1042501.md)
+
 3-3 [微软公司报告主要服务公司客户的电邮系统被中国政府黑客攻入](/articles/voa/1042502.md)
 
 3-3 [中国频繁窃取韩国技术，挖角、内奸、黑客并用手法巧妙](/articles/voa/1042503.md)
@@ -598,6 +600,4 @@
 2-20 [专家提醒：不建议中国用户在Clubhouse进行敏感对话](/articles/voa/1042799.md)
 
 2-20 [港府批准中国制科兴疫苗紧急使用 民主党批仓卒通过打击市民信心](/articles/voa/1042800.md)
-
-2-20 [香港电台雇员被要求宣誓效忠 工会对电台前途担忧](/articles/voa/1042801.md)
 
