--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-3 [缅甸爆发新的抗议 再有多位示威者丧生](/articles/voa/1042499.md)
+
+3-3 [保证成本低过中国 新德里促特斯拉在印度办厂](/articles/voa/1042500.md)
+
 3-3 [寻找新冠源头 科学家：是时候对武汉病毒所进行独立调查了](/articles/voa/1042501.md)
 
 3-3 [微软公司报告主要服务公司客户的电邮系统被中国政府黑客攻入](/articles/voa/1042502.md)
@@ -596,8 +600,4 @@
 2-20 [美国正式重返巴黎协定 拜登:气候变化是全球生存危机](/articles/voa/1042797.md)
 
 2-20 [拜登承诺向国际新冠疫苗项目出资40亿美元](/articles/voa/1042798.md)
-
-2-20 [专家提醒：不建议中国用户在Clubhouse进行敏感对话](/articles/voa/1042799.md)
-
-2-20 [港府批准中国制科兴疫苗紧急使用 民主党批仓卒通过打击市民信心](/articles/voa/1042800.md)
 
