--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-3 [反特朗普偶像的没落](/articles/nyt/1047124.md)
+
 3-3 [疫苗护照，新冠时代的下一个政治冲突引爆点？](/articles/nyt/1047125.md)
 
 3-3 [《爱的工厂》：在中国成为明星主播](/articles/nyt/1047126.md)
@@ -598,6 +600,4 @@
 12-17 [逃往台湾未果的香港活动人士被控偷越边境](/articles/nyt/1047422.md)
 
 12-17 [简报：中国正式封杀澳大利亚煤炭；嫦娥五号成功返回地球](/articles/nyt/1047423.md)
-
-12-16 [麦当劳鸡块和“我爱你”](/articles/nyt/1047424.md)
 
