--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+3-3 [起草者：欧盟必须修订《通用数据保护条例》](/articles/ft/1045953.md)
+
 3-3 [调查：澳大利亚华人对民主的支持率较低](/articles/ft/1045954.md)
 
 3-3 [拜登：美国到5月底将有足够疫苗为每个成年人接种](/articles/ft/1045955.md)
@@ -598,6 +600,4 @@
 1-19 [从工作的日常入手提升员工幸福感](/articles/ft/1046251.md)
 
 1-19 [谭德塞：全球疫苗分配面临“灾难性道德失败”](/articles/ft/1046252.md)
-
-1-18 [三星掌门人李在镕重新入狱](/articles/ft/1046253.md)
 
