--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-3 [伍迪·艾伦性丑闻与流行文化中的“厌女症”](/articles/nyt/1047123.md)
+
 3-3 [反特朗普偶像的没落](/articles/nyt/1047124.md)
 
 3-3 [疫苗护照，新冠时代的下一个政治冲突引爆点？](/articles/nyt/1047125.md)
@@ -598,6 +600,4 @@
 12-17 [中国正式禁止从澳大利亚进口煤炭，这对澳洲意味着什么](/articles/nyt/1047421.md)
 
 12-17 [逃往台湾未果的香港活动人士被控偷越边境](/articles/nyt/1047422.md)
-
-12-17 [简报：中国正式封杀澳大利亚煤炭；嫦娥五号成功返回地球](/articles/nyt/1047423.md)
 
