--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+3-3 [新冠停摆措施导致1.68亿儿童失学](/articles/dw/1043614.md)
+
+3-3 [德国专家解析中国扶贫报告 证实北京在新疆实施强迫劳动](/articles/dw/1043615.md)
+
+3-3 [俄羅斯老奶奶們的英雄司機](/articles/dw/1043616.md)
+
 3-3 [朝鲜核活动持续 美国防部:向华府施压](/articles/dw/1043617.md)
 
 3-3 [北京否认资助黑客攻击印度](/articles/dw/1043618.md)
@@ -594,10 +600,4 @@
 2-14 [澳大利亚和台湾签署自贸协定是否有好处？](/articles/dw/1043912.md)
 
 2-14 [太平洋岛国分歧 中国恐趁虚而入](/articles/dw/1043913.md)
-
-2-14 [七张图看一周大事](/articles/dw/1043914.md)
-
-2-13 [缅甸抗议升级 民众自发互助](/articles/dw/1043915.md)
-
-2-13 [回应安全质疑 Clubhouse称将加强数据保护](/articles/dw/1043916.md)
 
