--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-3 [【网络民议】有哪些墙外明明很正常的事情，但在墙内人看来匪夷所思？](/articles/cdt/385367.md)
+
 3-3 [【旧闻重温】南方周末｜“外送盟主”熊焰：我在网络为骑手兄弟发声](/articles/cdt/385368.md)
 
 3-3 [鱼眼观察｜某台公开招聘主持人，结果翻车了……](/articles/cdt/385369.md)
@@ -598,6 +600,4 @@
 1-29 [BBC | 香港政府拟推出电话实名制引发的忧虑](/articles/cdt/386440.md)
 
 1-29 [自由亚洲  |  郭飞雄机场绝食遭拦截失联 海内外声援呼吁美国营救](/articles/cdt/386441.md)
-
-1-29 [宋二 | 从今天起，看新闻联播！](/articles/cdt/386444.md)
 
