--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-3 [两会前瞻：消失的GDP目标会否再现？](/articles/voa/1042498.md)
+
 3-3 [缅甸爆发新的抗议 再有多位示威者丧生](/articles/voa/1042499.md)
 
 3-3 [保证成本低过中国 新德里促特斯拉在印度办厂](/articles/voa/1042500.md)
@@ -598,6 +600,4 @@
 2-20 [拜登：国际社会必须反击北京的经济威胁](/articles/voa/1042796.md)
 
 2-20 [美国正式重返巴黎协定 拜登:气候变化是全球生存危机](/articles/voa/1042797.md)
-
-2-20 [拜登承诺向国际新冠疫苗项目出资40亿美元](/articles/voa/1042798.md)
 
