--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-3 [“港版美丽岛”大审判第三日    港人未言弃：香港人一起走下去！](/articles/rfa/1046231.md)
+
 3-3 [多国力挺台湾凤梨 五天认购量逼近中国一年订单](/articles/rfa/1046232.md)
 
 3-3 [国民党主席江启臣：不急于与习近平会面](/articles/rfa/1046233.md)
@@ -598,6 +600,4 @@
 2-2 [新古巴危机？台专家：中共战略目的“不战而屈人之兵”](/articles/rfa/1046529.md)
 
 2-2 [缅甸军人掌权中国得益最大  学者指缅甸民主化只会更亲西方](/articles/rfa/1046530.md)
-
-2-2 [自媒体发言须领《许可证》  官方全面审批时政评论内容](/articles/rfa/1046531.md)
 
