--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,18 @@
 法广
 ------
 
+3-3 [自由之家2021全球报告自由度台湾加分进前 中港续跌](/articles/rfi/1033708.md)
+
+3-3 [埃及木乃伊黄金舌头 考古学家亚历山大港新发现 - 文化遗产](/articles/rfi/1033709.md)
+
+3-3 [美国宣布制裁措施 俄罗斯将对等回应](/articles/rfi/1033710.md)
+
+3-3 [澳洲延长关闭国际边境3个月 – 法国国际广播电台 - RFI](/articles/rfi/1033711.md)
+
+3-3 [荷兰COVID-19检测中心爆炸 – 法国国际广播电台 - RFI](/articles/rfi/1033712.md)
+
+3-3 [缅甸血腥镇压反政变示威 医护证实单日6死 – 法国国际广播电台 - RFI](/articles/rfi/1033713.md)
+
 3-3 [微软警告称中国黑客盯上了一款电子邮件产品](/articles/rfi/1033714.md)
 
 3-3 [法国医院被列入新冠病毒感染温床的名单不断加长](/articles/rfi/1033715.md)
@@ -588,16 +600,4 @@
 2-26 [美股重挫 东京股市日经指数跌幅逾3% – 法国国际广播电台 - RFI](/articles/rfi/1034006.md)
 
 2-26 [华尔街股市遇乱流 日股开盘重挫 – 法国国际广播电台 - RFI](/articles/rfi/1034007.md)
-
-2-26 [为确保好空气，北京冬奥推出区域联控](/articles/rfi/1034008.md)
-
-2-26 [离北京冬奥会开幕日不到一年，其组织条件仍让人存疑 - 法国世界报](/articles/rfi/1034009.md)
-
-2-26 [国际货币基金组织：数字时代公共货币与私人货币可以共存 - 今日经济](/articles/rfi/1034010.md)
-
-2-26 [印度与巴基斯坦在克什米尔印巴控制线沿线停火](/articles/rfi/1034011.md)
-
-2-26 [新冠疫情下美国西岸两大港口工人开工率不足，上百艘货轮停泊海上无法进港](/articles/rfi/1034012.md)
-
-2-26 [拔起新疆种族灭绝的“萝卜” 带出抵制北京冬奥会的“泥 ” - 要闻分析](/articles/rfi/1034013.md)
 
