--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-3 [近20年首次 德国将派军舰巡航南中国海](/articles/voa/1042497.md)
+
 3-3 [两会前瞻：消失的GDP目标会否再现？](/articles/voa/1042498.md)
 
 3-3 [缅甸爆发新的抗议 再有多位示威者丧生](/articles/voa/1042499.md)
@@ -598,6 +600,4 @@
 2-20 [拜登时代，建“小院高墙”保护科技优势](/articles/voa/1042795.md)
 
 2-20 [拜登：国际社会必须反击北京的经济威胁](/articles/voa/1042796.md)
-
-2-20 [美国正式重返巴黎协定 拜登:气候变化是全球生存危机](/articles/voa/1042797.md)
 
