--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+3-3 [郭树清两会前发言：紧缩来临？](/articles/ft/1045949.md)
+
 3-3 [央行应该以什么为目标？](/articles/ft/1045950.md)
 
 3-3 [各国央行政策趋同的时代已经终结](/articles/ft/1045951.md)
@@ -598,6 +600,4 @@
 1-19 [“少数”与“多数”的转换：美国民主制度还灵吗？](/articles/ft/1046247.md)
 
 1-19 [为移民说公道话的好书](/articles/ft/1046248.md)
-
-1-19 [PPLive反诉英超 双方合同纠纷升级](/articles/ft/1046249.md)
 
