--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-4 [德国现行封锁令将出现哪些松动？](/articles/dw/1043603.md)
+
 3-3 [中国两会：五年规划指向何方？](/articles/dw/1043604.md)
 
 3-3 [盖洛普：美国人对中俄好感度创新低](/articles/dw/1043605.md)
@@ -598,6 +600,4 @@
 2-14 [担心变种病毒“入侵” 德国关闭部分边境](/articles/dw/1043901.md)
 
 2-14 [中国在拉美：来了就没想走](/articles/dw/1043902.md)
-
-2-14 [德国超市Lidl提高肉价　消费者为何不买帐？](/articles/dw/1043903.md)
 
