--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-4 [美国德州等放宽疫情限制，拜登警告现在为时尚早](/articles/voa/1042494.md)
+
 3-4 [脱贫背后是同化 大批维族人背井离乡被转至外地就业](/articles/voa/1042495.md)
 
 3-3 [缅甸抓捕多名记者，记者组织呼吁缅甸当局立即释放](/articles/voa/1042496.md)
@@ -598,6 +600,4 @@
 2-20 [美众院外委会两党领袖推出谴责中国践踏港人权利决议](/articles/voa/1042792.md)
 
 2-20 [被控隐瞒中国军人身份的斯坦福研究人员受到新起诉并增加罪名](/articles/voa/1042793.md)
-
-2-20 [拜登：我们处在维护民主制历史拐点 必须为与中国长期战略竞争做好准备](/articles/voa/1042794.md)
 
