--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-4 [加拿大维吾尔社区将串联抗议  抵制强迫劳动商品进口](/articles/rfa/1046228.md)
+
 3-3 [中梵主教任命临时协议用过即丢？ 青岛主教就职未提教宗](/articles/rfa/1046229.md)
 
 3-3 [武汉疫情初期总死亡率比预期增逾五成  大陆媒体报道被404（删除）](/articles/rfa/1046230.md)
@@ -598,6 +600,4 @@
 2-2 [代理12港人案被吊证 中国律师任全牛：没有丝毫后悔](/articles/rfa/1046526.md)
 
 2-2 [教育部禁止中小学生校园用手机被质疑搞政治秀](/articles/rfa/1046527.md)
-
-2-2 [两岸领导民望旧人胜新人](/articles/rfa/1046528.md)
 
