--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-4 [时事大家谈: 美中实力空前接近，亚太将见证危险十年？](/articles/voa/1042489.md)
+
 3-4 [3名青海藏族青少年因“违规”建微信群被警方逮捕](/articles/voa/1042490.md)
 
 3-4 [台湾新国安团队上任 迎来凤梨被禁难题](/articles/voa/1042491.md)
@@ -598,6 +600,4 @@
 2-20 [专访美共和党联邦众议员华尔兹：“中共不应享有举办奥运的殊荣和利益”](/articles/voa/1042787.md)
 
 2-20 [美国务院：中国《海警法》可能加剧海上争端并用于非法主权声索](/articles/voa/1042788.md)
-
-2-20 [缅甸抗议者抨击北京，称军人独裁为“中国制造”](/articles/voa/1042789.md)
 
