--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-4 [专访香港前惩教主任X先生：离职、抗争与流亡](/articles/rfa/1046226.md)
+
 3-4 [欧盟首次启用人权制裁制度  议员质疑惩罚俄罗斯却未制裁中国](/articles/rfa/1046227.md)
 
 3-4 [加拿大维吾尔社区将串联抗议  抵制强迫劳动商品进口](/articles/rfa/1046228.md)
@@ -598,6 +600,4 @@
 2-3 [一件T恤衫图案  加中外交风波再起](/articles/rfa/1046524.md)
 
 2-2 [张安乐自曝组“红色队伍”倡统一 陆委会支持检调侦办](/articles/rfa/1046525.md)
-
-2-2 [代理12港人案被吊证 中国律师任全牛：没有丝毫后悔](/articles/rfa/1046526.md)
 
