--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-4 [伊拉克一处基地遭火箭袭击 一名美国文职合同工丧生](/articles/voa/1042487.md)
+
 3-4 [布林肯宣布中国是本世纪世界最大地缘政治考验](/articles/voa/1042488.md)
 
 3-4 [时事大家谈: 美中实力空前接近，亚太将见证危险十年？](/articles/voa/1042489.md)
@@ -598,6 +600,4 @@
 2-20 [拜登参观辉瑞新冠疫苗生产厂](/articles/voa/1042785.md)
 
 2-20 [中共全面复兴传统文化，“就是两个字：帝制”](/articles/voa/1042786.md)
-
-2-20 [专访美共和党联邦众议员华尔兹：“中共不应享有举办奥运的殊荣和利益”](/articles/voa/1042787.md)
 
