--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+3-4 [英国向企业提供税收优惠以刺激投资](/articles/ft/1045948.md)
+
 3-3 [郭树清两会前发言：紧缩来临？](/articles/ft/1045949.md)
 
 3-3 [央行应该以什么为目标？](/articles/ft/1045950.md)
@@ -598,6 +600,4 @@
 1-19 [创新奇智徐辉：人工智能可以赋能百业](/articles/ft/1046246.md)
 
 1-19 [“少数”与“多数”的转换：美国民主制度还灵吗？](/articles/ft/1046247.md)
-
-1-19 [为移民说公道话的好书](/articles/ft/1046248.md)
 
