--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+3-4 [印度要求OPEC+产油国履行稳定油价的承诺--石油部长](/articles/reuters/1040790.md)
+
+3-4 [多数国家主权评级仍远未受到债券收益率上升影响--标普全球](/articles/reuters/1040791.md)
+
 3-4 [焦点：近期欧元区名义利率上升或打压经济成长和通胀--ECB管委德科斯](/articles/reuters/1040792.md)
 
 3-4 [德国战舰计划穿越南中国海 美国称此举支持了基于规则的国际秩序](/articles/reuters/1040793.md)
@@ -596,8 +600,4 @@
 2-2 [调查：未来两年美国房价料续涨 对疫情冲击有免疫力--分析师](/articles/reuters/1041088.md)
 
 2-2 [亚股续涨 对刺激计划和全球经济复苏的乐观情绪增强](/articles/reuters/1041089.md)
-
-2-2 [股市狂热 中国共同基金吸引创纪录资金流入](/articles/reuters/1041090.md)
-
-2-2 [焦点：散户涌向银市爆买 交易商急寻供应来满足需求](/articles/reuters/1041091.md)
 
