--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-4 [白宫、国会展开协商应对北京威胁 共和党推法防堵中国科技企业](/articles/voa/1042471.md)
+
 3-4 [应对气候变化，美中合作面临重重障碍](/articles/voa/1042472.md)
 
 3-4 [共和党人在创纪录的选举投票率后寻求改变投票方式](/articles/voa/1042473.md)
@@ -598,6 +600,4 @@
 2-21 [脸书删除缅甸军方网站主页](/articles/voa/1042769.md)
 
 2-21 [经过最暴力的一天后，缅甸抗议者再次聚集](/articles/voa/1042770.md)
-
-2-21 [全球行动唤缅甸自由，南加州支持者呼吁北京停止干涉](/articles/voa/1042771.md)
 
