--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+3-4 [每周时事分析：也谈中国人为何多不愿打疫苗](/articles/ft/1045946.md)
+
+3-4 [中国和南非警方破获制售假疫苗犯罪网络](/articles/ft/1045947.md)
+
 3-4 [英国向企业提供税收优惠以刺激投资](/articles/ft/1045948.md)
 
 3-3 [郭树清两会前发言：紧缩来临？](/articles/ft/1045949.md)
@@ -596,8 +600,4 @@
 1-19 [对拜登-贺锦丽的期待：开启美国大和解时代](/articles/ft/1046244.md)
 
 1-19 [一个在美华人对拜登新政府的期许](/articles/ft/1046245.md)
-
-1-19 [创新奇智徐辉：人工智能可以赋能百业](/articles/ft/1046246.md)
-
-1-19 [“少数”与“多数”的转换：美国民主制度还灵吗？](/articles/ft/1046247.md)
 
