--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,9 +1,15 @@
 中国数字时代
 ------
 
+3-4 [自由亚洲 | 武汉疫情初期总死亡率比预期增逾五成  大陆媒体报道被404](/articles/cdt/385354.md)
+
+3-4 [天下说法 | 为何刑讯逼供又死灰复燃了……](/articles/cdt/385355.md)
+
 3-4 [麟阁政经 | 韭菜不够，爱国生意开始“内卷”了](/articles/cdt/385357.md)
 
 3-4 [吉钟贡：新冠病毒疫情中中共的故伎重演](/articles/cdt/385358.md)
+
+3-4 [【CDT月度视频】2021年2月：深思熟虑后  我违背了祖宗“一定要做个人”的祖训](/articles/cdt/385365.md)
 
 3-3 [【网络民议】有哪些墙外明明很正常的事情，但在墙内人看来匪夷所思？](/articles/cdt/385367.md)
 
@@ -594,10 +600,4 @@
 1-30 [与归随笔 | 如果用胡锡进的辩证法造句](/articles/cdt/386400.md)
 
 1-30 [端传媒 | BNO触发中英角力：北京、港府称护照无效，英国称欢迎持有者以其他方式入境（节选）](/articles/cdt/386428.md)
-
-1-30 [立场新闻 | 古思尧的火红人生：抗争在故我在（节选）](/articles/cdt/386429.md)
-
-1-30 [【网络民议】王biubiu | 胡锡进的微博评论区翻车了](/articles/cdt/386433.md)
-
-1-30 [【立此存照】“新媒体舆论引导工作群”截图](/articles/cdt/386436.md)
 
