--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-4 [自由之家2021报告  中国自由度再列全球倒数](/articles/dw/1043600.md)
+
 3-4 [布林肯：美中关系是本世纪最大地缘政治考验](/articles/dw/1043601.md)
 
 3-4 [孟晚舟律师 :换拜登也不能改变政治干预事实](/articles/dw/1043602.md)
@@ -598,6 +600,4 @@
 2-15 [驳护航论 世卫疫源调查专家怎么说?](/articles/dw/1043898.md)
 
 2-14 [俄罗斯：情人节示威活动声援纳瓦尔尼](/articles/dw/1043899.md)
-
-2-14 [中方反驳美国指责 世卫专家斥媒体断章取义](/articles/dw/1043900.md)
 
