--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,12 @@
 中国数字时代
 ------
 
+3-4 [网信无锡 | 抖音封禁3973个炫富账号！](/articles/cdt/385348.md)
+
+3-4 [新浪科技｜ “蚂蚁呀嘿”的这款Avatarify，在国内火完七天就下架了](/articles/cdt/385349.md)
+
+3-4 [美国之音 | 白宫公布国家安全战略方针：中国是唯一有综合实力挑战国际体制的竞争者](/articles/cdt/385350.md)
+
 3-4 [自由亚洲 | 武汉疫情初期总死亡率比预期增逾五成  大陆媒体报道被404](/articles/cdt/385354.md)
 
 3-4 [天下说法 | 为何刑讯逼供又死灰复燃了……](/articles/cdt/385355.md)
@@ -594,10 +600,4 @@
 1-31 [3号厅检票员工 | 我还是你们骂的娘炮](/articles/cdt/386394.md)
 
 1-30 [真实故事计划 | 打工人第一次在北上广过年](/articles/cdt/386397.md)
-
-1-30 [【异闻观止】广州11个区一个月内“无婚可离”](/articles/cdt/386398.md)
-
-1-30 [与归随笔 | 如果用胡锡进的辩证法造句](/articles/cdt/386400.md)
-
-1-30 [端传媒 | BNO触发中英角力：北京、港府称护照无效，英国称欢迎持有者以其他方式入境（节选）](/articles/cdt/386428.md)
 
