--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-4 [美交通部监察长称赵小兰滥用职权，与中国交往密切](/articles/nyt/1047119.md)
+
 3-4 [美国务卿：处理美中关系是21世纪最大地缘政治考验](/articles/nyt/1047120.md)
 
 3-4 [“东升西降”：习近平的后疫情时代中国崛起蓝图](/articles/nyt/1047121.md)
@@ -598,6 +600,4 @@
 12-18 [简报：中国拟订购首批国外新冠疫苗；法国总统马克龙确诊](/articles/nyt/1047417.md)
 
 12-17 [心理学家教你三招戒掉“手机瘾”](/articles/nyt/1047418.md)
-
-12-17 [嫦娥五号携月球样本返回地球，太空竞赛新时代来临](/articles/nyt/1047419.md)
 
