--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-4 [民主派初选案保释听证进入尾声 专家：程序正义成闹剧](/articles/dw/1043598.md)
+
 3-4 [专访：两岸水果政治角力](/articles/dw/1043599.md)
 
 3-4 [自由之家2021报告  中国自由度再列全球倒数](/articles/dw/1043600.md)
@@ -598,6 +600,4 @@
 2-15 [韩国名人自杀事件背后的性别不平等](/articles/dw/1043896.md)
 
 2-15 [仰光出现装甲车 欧美警告缅军慎行](/articles/dw/1043897.md)
-
-2-15 [驳护航论 世卫疫源调查专家怎么说?](/articles/dw/1043898.md)
 
