--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+3-4 [政协报告 :“港人治港”、“高度自治”、“一国两制”全部消失](/articles/rfa/1046218.md)
+
+3-4 [本台台湾记者报道“港版美丽岛”大审判   多名被告自辩称无悔服务社会](/articles/rfa/1046219.md)
+
 3-4 [以“脱贫”之名       中国转移大量维族人离乡就业](/articles/rfa/1046220.md)
 
 3-4 [中国肛拭子检测引国际抗议   疫苗接种进展缓慢](/articles/rfa/1046221.md)
@@ -596,8 +600,4 @@
 2-3 [中共20大筹备工作启动     领导班子换人“十个严禁”](/articles/rfa/1046516.md)
 
 2-3 [情绪识别: 中国AI读心术的惊悚黑科技](/articles/rfa/1046517.md)
-
-2-3 [专家惊呼：中国人口塌陷已经到来](/articles/rfa/1046518.md)
-
-2-3 [布林肯、杨洁篪隔空喊话   美中互亮底牌](/articles/rfa/1046519.md)
 
