--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+3-4 [英商界领袖警告提高公司税不利于投资](/articles/ft/1045945.md)
+
 3-4 [每周时事分析：也谈中国人为何多不愿打疫苗](/articles/ft/1045946.md)
 
 3-4 [中国和南非警方破获制售假疫苗犯罪网络](/articles/ft/1045947.md)
@@ -598,6 +600,4 @@
 1-20 [德国车企求助默克尔政府解决半导体供应短缺](/articles/ft/1046243.md)
 
 1-19 [对拜登-贺锦丽的期待：开启美国大和解时代](/articles/ft/1046244.md)
-
-1-19 [一个在美华人对拜登新政府的期许](/articles/ft/1046245.md)
 
