--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-4 [美国智库不再为香港经济自由度排名   势加剧走资潮](/articles/rfa/1046216.md)
+
 3-4 [拜登国家安全战略指南表态支持台湾  学者：温和而模糊](/articles/rfa/1046217.md)
 
 3-4 [政协报告 :“港人治港”、“高度自治”、“一国两制”全部消失](/articles/rfa/1046218.md)
@@ -598,6 +600,4 @@
 2-3 [台湾立法院长呼吁盟国 抵御极权国家控制亚太野心](/articles/rfa/1046514.md)
 
 2-3 [拜登上台两周仍未与习近平通话](/articles/rfa/1046515.md)
-
-2-3 [中共20大筹备工作启动     领导班子换人“十个严禁”](/articles/rfa/1046516.md)
 
