--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-4 [关于纽约州长科莫性骚扰丑闻，我们知道些什么](/articles/nyt/1047117.md)
+
 3-4 [想当纽约市长？馄饨和鸡翅都很重要](/articles/nyt/1047118.md)
 
 3-4 [美交通部监察长称赵小兰滥用职权，与中国交往密切](/articles/nyt/1047119.md)
@@ -598,6 +600,4 @@
 12-18 [亚裔美国人政治联盟教给民主党人的事](/articles/nyt/1047415.md)
 
 12-18 [展望2021：全球大事议程表](/articles/nyt/1047416.md)
-
-12-18 [简报：中国拟订购首批国外新冠疫苗；法国总统马克龙确诊](/articles/nyt/1047417.md)
 
