--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-4 [香港被全球经济自由度排行榜除名 港府批“政治偏见”](/articles/voa/1042468.md)
+
 3-4 [缅甸民众不畏致命暴力镇压继续上街 美国呼吁中国建设性施加影响力](/articles/voa/1042469.md)
 
 3-4 [美国务卿：中国至今依然不透明分享新冠疫情信息](/articles/voa/1042470.md)
@@ -598,6 +600,4 @@
 2-22 [一名95岁前纳粹集中营卫兵日前被美国遣送回德国](/articles/voa/1042766.md)
 
 2-22 [联合国秘书长谴责缅甸军警开枪打死示威民众](/articles/voa/1042767.md)
-
-2-21 [伊朗继续坚持美国先解除制裁后重启核协议的立场](/articles/voa/1042768.md)
 
