--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-4 [习发起党史学习教育洗脑 提升一尊地位继续掌权](/articles/voa/1042466.md)
+
+3-4 [美联社：两会看点](/articles/voa/1042467.md)
+
 3-4 [香港被全球经济自由度排行榜除名 港府批“政治偏见”](/articles/voa/1042468.md)
 
 3-4 [缅甸民众不畏致命暴力镇压继续上街 美国呼吁中国建设性施加影响力](/articles/voa/1042469.md)
@@ -596,8 +600,4 @@
 2-22 [印度、中国完成从湖区边境撤军](/articles/voa/1042764.md)
 
 2-22 [中共两会前夕数百公民联署促出台《政府法》监督官员依法行政](/articles/voa/1042765.md)
-
-2-22 [一名95岁前纳粹集中营卫兵日前被美国遣送回德国](/articles/voa/1042766.md)
-
-2-22 [联合国秘书长谴责缅甸军警开枪打死示威民众](/articles/voa/1042767.md)
 
