--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-4 [中国推出演艺圈行为准则](/articles/dw/1043590.md)
+
 3-4 [缅甸血腥的一天](/articles/dw/1043591.md)
 
 3-4 [澳洲报告：华人感觉受歧视 政治认知有差异](/articles/dw/1043592.md)
@@ -598,6 +600,4 @@
 2-15 [伊朗与俄、中联合海上演习 意欲何为？](/articles/dw/1043888.md)
 
 2-15 [58国签署宣言要求停止任意拘押外国人](/articles/dw/1043889.md)
-
-2-15 [各地实施隔离新政 海外华人春节回国难回家](/articles/dw/1043890.md)
 
