--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-4 [赵小兰被指公器私用发展家族生意，赵回应：宣传家庭乃职责所在](/articles/voa/1042463.md)
+
 3-4 [内蒙为降能耗计划给比特币采矿熄火](/articles/voa/1042464.md)
 
 3-4 [中共控制下的人大代表的产生与参政议政](/articles/voa/1042465.md)
@@ -598,6 +600,4 @@
 2-22 [前副国家安全顾问博明指责中国试图掩盖新冠疫情](/articles/voa/1042761.md)
 
 2-22 [英国将在联合国就进入新疆问题挑战中国](/articles/voa/1042762.md)
-
-2-22 [美国与伊朗开始人质谈判](/articles/voa/1042763.md)
 
