--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-5 [中老铁路预计年底通车 是双赢还是陷阱？](/articles/voa/1042462.md)
+
 3-4 [赵小兰被指公器私用发展家族生意，赵回应：宣传家庭乃职责所在](/articles/voa/1042463.md)
 
 3-4 [内蒙为降能耗计划给比特币采矿熄火](/articles/voa/1042464.md)
@@ -598,6 +600,4 @@
 2-22 [缅甸民众在中国驻美大使馆外举行抗议示威](/articles/voa/1042760.md)
 
 2-22 [前副国家安全顾问博明指责中国试图掩盖新冠疫情](/articles/voa/1042761.md)
-
-2-22 [英国将在联合国就进入新疆问题挑战中国](/articles/voa/1042762.md)
 
