--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-5 [法国通过CGTN播放执照申请 官媒环球电视网在欧洲死灰复燃](/articles/voa/1042460.md)
+
+3-5 [汪洋讲话露玄机，邓小平12字治港方针已荡然无存](/articles/voa/1042461.md)
+
 3-5 [中老铁路预计年底通车 是双赢还是陷阱？](/articles/voa/1042462.md)
 
 3-4 [赵小兰被指公器私用发展家族生意，赵回应：宣传家庭乃职责所在](/articles/voa/1042463.md)
@@ -596,8 +600,4 @@
 2-22 [疫苗分发因天气受延误 多州努力推进接种](/articles/voa/1042758.md)
 
 2-22 [各界谴责针对亚裔美国人的暴力犯罪](/articles/voa/1042759.md)
-
-2-22 [缅甸民众在中国驻美大使馆外举行抗议示威](/articles/voa/1042760.md)
-
-2-22 [前副国家安全顾问博明指责中国试图掩盖新冠疫情](/articles/voa/1042761.md)
 
