--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-5 [“我随时愿意打一场美好的仗” 蓬佩奥剑指2024总统选战？](/articles/voa/1042456.md)
+
+3-5 [东京奥运会拟禁国外观众入境并限制观众人数](/articles/voa/1042457.md)
+
 3-5 [中国和南非缴获大批假新冠疫苗 国际刑警称其为“冰山一角”](/articles/voa/1042458.md)
 
 3-5 [SpaceX测试火箭顺利升空 成功着陆 最终爆炸](/articles/voa/1042459.md)
@@ -596,8 +600,4 @@
 2-22 [拜登难民政策终将扩展美国的移民安置计划](/articles/voa/1042754.md)
 
 2-22 [美现任和前任国安顾问都指责北京在新冠病毒起源问题上不透明](/articles/voa/1042755.md)
-
-2-22 [“老生常谈” 中国官员们继续为美国对华政策划红线](/articles/voa/1042756.md)
-
-2-22 [拜登公布上任一个月防疫成果，探视友台前议员多尔](/articles/voa/1042757.md)
 
