--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+3-5 [廖天琪：再度受到打压的香港法制能够幸存么？ - 公民论坛](/articles/rfi/1033630.md)
+
 3-5 [IAEA本周理事会  英法德不提谴责伊朗决议案 – 法国国际广播电台 - RFI](/articles/rfi/1033631.md)
 
 3-5 [侯芷明批法国CSA向中国环球电视网颁发播放执照 指CGTN欧洲长驱直入 而欧洲媒体则遭中国严禁](/articles/rfi/1033632.md)
@@ -598,6 +600,4 @@
 2-27 [海地监狱暴动25死 200名囚犯仍在逃 – 法国国际广播电台 - RFI](/articles/rfi/1033928.md)
 
 2-27 [华盛顿指责沙特王储“批准”谋杀记者卡舒吉 但决定不予惩罚](/articles/rfi/1033929.md)
-
-2-27 [欧盟驻古巴大使致信拜登要求解除限制后被召回述职](/articles/rfi/1033930.md)
 
