--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+3-5 [拜登罕见公布国安指南   中国是“最大地缘政治挑战”](/articles/rfa/1046209.md)
+
+3-5 [为新疆种族灭绝和两加拿大人被拘捕   特鲁多和丛培武隔空叫阵](/articles/rfa/1046210.md)
+
+3-5 [法囯通过CGTN牌照申请  学者称法国人未意识中国官媒的假信息风险](/articles/rfa/1046211.md)
+
 3-5 [政协常委报告成读书会  历数去年学习内容](/articles/rfa/1046212.md)
 
 3-4 [“港版美丽岛”大审判    法官准15人保释遭律政司反对续还柙](/articles/rfa/1046213.md)
@@ -594,10 +600,4 @@
 2-4 [新疆拘留营幸存者披露：营内时常发生强奸和性侵维族妇女事件](/articles/rfa/1046507.md)
 
 2-4 [台湾治理疫情成为民主国家典范  法国智库提研究计画](/articles/rfa/1046508.md)
-
-2-4 [专访“墙国反贼”陶哥：一个90后油管播主的心路历程](/articles/rfa/1046509.md)
-
-2-3 [全球民主指数达14年新低 台湾进步最多跃东亚第一](/articles/rfa/1046510.md)
-
-2-3 [台湾西南空域美军机比解放军多 美持续释放挺台讯号](/articles/rfa/1046511.md)
 
