--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-5 [竞争、合作也对抗   华盛顿与北京还能共舞乎？](/articles/rfa/1046208.md)
+
 3-5 [拜登罕见公布国安指南   中国是“最大地缘政治挑战”](/articles/rfa/1046209.md)
 
 3-5 [为新疆种族灭绝和两加拿大人被拘捕   特鲁多和丛培武隔空叫阵](/articles/rfa/1046210.md)
@@ -598,6 +600,4 @@
 2-4 [《经济学人》全球民主指数 香港下挫至 “杂交式政体”](/articles/rfa/1046506.md)
 
 2-4 [新疆拘留营幸存者披露：营内时常发生强奸和性侵维族妇女事件](/articles/rfa/1046507.md)
-
-2-4 [台湾治理疫情成为民主国家典范  法国智库提研究计画](/articles/rfa/1046508.md)
 
