--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-5 [江西、山东全面放开落户限制](/articles/rfa/1046207.md)
+
 3-5 [竞争、合作也对抗   华盛顿与北京还能共舞乎？](/articles/rfa/1046208.md)
 
 3-5 [拜登罕见公布国安指南   中国是“最大地缘政治挑战”](/articles/rfa/1046209.md)
@@ -598,6 +600,4 @@
 2-4 [专家：中欧《全面投资协定》将改变国际商业秩序](/articles/rfa/1046505.md)
 
 2-4 [《经济学人》全球民主指数 香港下挫至 “杂交式政体”](/articles/rfa/1046506.md)
-
-2-4 [新疆拘留营幸存者披露：营内时常发生强奸和性侵维族妇女事件](/articles/rfa/1046507.md)
 
