--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+3-5 [白宫要义: 拜登总统: 基础设施建设将增强美国竞争力](/articles/voa/1042446.md)
+
+3-5 [强生疫苗开始发放 接种公平受到关注](/articles/voa/1042447.md)
+
+3-5 [香港法院裁定47名民主活动人士继续被羁押](/articles/voa/1042448.md)
+
+3-5 [气候变化是否能为美中合作敞开大门？](/articles/voa/1042449.md)
+
+3-5 [40名科学家联名支持被控隐瞒参与中国千人计划的哈佛教授](/articles/voa/1042450.md)
+
 3-5 [美国会警察局希望国民警卫队继续留守](/articles/voa/1042451.md)
 
 3-5 [缅甸驻美使馆人员加入反对军政府运动](/articles/voa/1042452.md)
@@ -590,14 +600,4 @@
 2-22 [前副国家安全顾问博明指责中国试图掩盖新冠疫情](/articles/voa/1042744.md)
 
 2-22 [英国将在联合国就进入新疆问题挑战中国](/articles/voa/1042745.md)
-
-2-22 [美国与伊朗开始人质谈判](/articles/voa/1042746.md)
-
-2-22 [印度、中国完成从湖区边境撤军](/articles/voa/1042747.md)
-
-2-22 [疫情之下 中国大学生面临严峻就业形势](/articles/voa/1042748.md)
-
-2-22 [联合国秘书长谴责缅甸军警开枪打死示威民众](/articles/voa/1042749.md)
-
-2-22 [中共“伊斯兰教中国化”之火烧至偏远海南三亚穆斯林社区](/articles/voa/1042750.md)
 
