--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+3-5 [美印太司令寻求270亿“威慑资金”应对中国](/articles/rfa/1046203.md)
+
+3-5 [皮尤民调：七成美国人支持在人权和经济上对华强硬](/articles/rfa/1046204.md)
+
 3-5 [澳洲华人对民主支持度低 超八成资讯来源是微信](/articles/rfa/1046205.md)
 
 3-5 [内蒙将关停虚拟货币挖矿项目  比特币有麻烦了？](/articles/rfa/1046206.md)
@@ -596,8 +600,4 @@
 2-4 [哈萨克人权组织访美   继续披露新疆教育营内幕](/articles/rfa/1046501.md)
 
 2-4 [中共文件强调红色基因    少年儿童须跟共产党走](/articles/rfa/1046502.md)
-
-2-4 [博明提醒拜登政府不要落入与中国谈判的陷阱](/articles/rfa/1046503.md)
-
-2-4 [学者：缅甸政变或得北京默许 中缅各取所需？](/articles/rfa/1046504.md)
 
