--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+3-5 [基本常识｜为了防止你家孩子阶层上升，代表委员们真的操碎了心](/articles/cdt/385342.md)
+
 3-4 [短史记｜且慢嘲笑韩国人将「回光返照」四个字挂在家里](/articles/cdt/385347.md)
 
 3-4 [网信无锡 | 抖音封禁3973个炫富账号！](/articles/cdt/385348.md)
@@ -598,6 +600,4 @@
 1-30 [水瓶纪元 | 一味纠正“女性化”、倡导“阳刚之气”会产生什么问题？](/articles/cdt/386391.md)
 
 1-30 [王昊轩 | 个人为什么不能发政治，经济等原创内容？](/articles/cdt/386392.md)
-
-1-31 [3号厅检票员工 | 我还是你们骂的娘炮](/articles/cdt/386394.md)
 
