--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+3-5 [意大利阻止向澳大利亚出口阿斯利康疫苗](/articles/ft/1045939.md)
+
 3-5 [德国批准65岁以上人群接种阿斯利康疫苗](/articles/ft/1045940.md)
 
 3-5 [美食潮流：新语言料理](/articles/ft/1045941.md)
@@ -598,6 +600,4 @@
 1-20 [美股究竟是便宜还是贵？](/articles/ft/1046237.md)
 
 1-20 [IEA：新一轮抗疫封锁将打压石油需求](/articles/ft/1046238.md)
-
-1-20 [特朗普发布离任讲话](/articles/ft/1046239.md)
 
