--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+3-5 [缅甸军方血腥镇压 美国祭新制裁管制出口 – 法国国际广播电台 - RFI](/articles/rfi/1033615.md)
+
+3-5 [义大利禁运AZ疫苗 澳洲官方淡化处理 – 法国国际广播电台 - RFI](/articles/rfi/1033616.md)
+
 3-5 [侯志明批“法国最高视听委员会”轻易、悄声颁发播放权](/articles/rfi/1033617.md)
 
 3-5 [香港：47名民主派人士中，15人获保释](/articles/rfi/1033618.md)
@@ -596,8 +600,4 @@
 2-28 [缅甸常驻代表因反对军政权被撤职　数百示威者被捕](/articles/rfi/1033913.md)
 
 2-28 [法国新冠入院人数略有下降 尼斯等市周末“封城”](/articles/rfi/1033914.md)
-
-2-28 [缅甸警方在仰光向示威者发射橡皮子弹](/articles/rfi/1033915.md)
-
-2-28 [海地数百囚犯集体越狱 一名督察殉职](/articles/rfi/1033916.md)
 
