--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+3-5 [部分科学家联署，质疑WHO武汉溯源调查](/articles/nyt/1047112.md)
+
 3-5 [无所畏惧的一代：站在抗议第一线的缅甸年轻女性](/articles/nyt/1047113.md)
 
 3-5 [中国将2021年经济增长目标设定为6%以上](/articles/nyt/1047114.md)
@@ -598,6 +600,4 @@
 12-21 [简报：Zoom高管干扰“六四”会议被起诉；英国现新冠变种](/articles/nyt/1047410.md)
 
 12-19 [压制负面新闻：机密文件揭露中国如何操纵疫情舆论](/articles/nyt/1047411.md)
-
-12-18 [中国独立记者杜斌被拘，曾出版批评中共书籍](/articles/nyt/1047412.md)
 
