--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-5 [国务院宣布本年度国际妇女勇气奖获奖者名单 中国维权律师王宇将受表彰](/articles/voa/1042434.md)
+
 3-5 [国际社会对缅甸政变反应不一，缅甸军方才有恃无恐](/articles/voa/1042435.md)
 
 3-5 [美国国务院：与史瓦帝尼和台湾共创伙伴关系机会](/articles/voa/1042436.md)
@@ -598,6 +600,4 @@
 2-23 [众院委员会通过拜登1.9万亿美国救援计划 里面都有啥？](/articles/voa/1042732.md)
 
 2-23 [美国宇航局补给飞船与国际空间站对接](/articles/voa/1042733.md)
-
-2-23 [时事大家谈: 威权主义步步紧逼，中国崛起意味着什么？](/articles/voa/1042734.md)
 
