--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+3-5 [广东拟建高速磁浮铁路   学者：天方夜谭](/articles/rfa/1046202.md)
+
 3-5 [美印太司令寻求270亿“威慑资金”应对中国](/articles/rfa/1046203.md)
 
 3-5 [皮尤民调：七成美国人支持在人权和经济上对华强硬](/articles/rfa/1046204.md)
@@ -598,6 +600,4 @@
 2-4 [台湾外交突破！ 在南美圭亚那设立“台湾办公室”](/articles/rfa/1046500.md)
 
 2-4 [哈萨克人权组织访美   继续披露新疆教育营内幕](/articles/rfa/1046501.md)
-
-2-4 [中共文件强调红色基因    少年儿童须跟共产党走](/articles/rfa/1046502.md)
 
