--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-5 [专访：中国透过新疆强迫劳动项目「撕裂」一个民族](/articles/dw/1043580.md)
+
 3-5 [李克强：遏制外部干预港澳  坚持独立自主外交](/articles/dw/1043581.md)
 
 3-5 [人大看点：中国经济增速目标6%以上](/articles/dw/1043582.md)
@@ -598,6 +600,4 @@
 2-15 [CGTN在德获许可几无可能 在欧传播依然畅通](/articles/dw/1043878.md)
 
 2-15 [杜特尔特要求美国大兵“拿钱过来！”](/articles/dw/1043879.md)
-
-2-15 [港府拟修订入境条例 大律师公会表关切](/articles/dw/1043880.md)
 
