--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+3-5 [【404文库】英国驻华大使馆 | 外国媒体憎恨中国吗？](/articles/cdt/385317.md)
+
+3-5 [【异闻观止】意识形态爱国，《无依之地》导演赵婷被挖出黑历史](/articles/cdt/385320.md)
+
 3-5 [众新闻 | 参选香港立法会须审查　王晨：形成“香港特色”新民主选举制度](/articles/cdt/385322.md)
 
 3-5 [端传媒 | 等墙来：Clubhouse真正“活”在中文世界的片刻（节选）](/articles/cdt/385323.md)
@@ -596,8 +600,4 @@
 2-1 [【CDT周报】第二期：只允许一种声音存在 那这唯一的声音必然是谎言](/articles/cdt/386348.md)
 
 1-31 [美国之音 | 中国的抗疫绝招与人类文明的反差](/articles/cdt/386349.md)
-
-1-31 [经观报书评 | 思想史学者林毓生：中国近代思想中的反传统思潮如何影响了历史？](/articles/cdt/386379.md)
-
-1-31 [全现在 | 还原“墨茶”：一个虚拟主播是如何被真实生活“杀死”的](/articles/cdt/386382.md)
 
