--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+3-5 [只因新冠?美国亚裔为何屡受攻击](/articles/dw/1043579.md)
+
 3-5 [专访：中国透过新疆强迫劳动项目「撕裂」一个民族](/articles/dw/1043580.md)
 
 3-5 [李克强：遏制外部干预港澳  坚持独立自主外交](/articles/dw/1043581.md)
@@ -598,6 +600,4 @@
 2-16 [媒体评特朗普弹劾案：华盛顿的政治文化已堕落](/articles/dw/1043877.md)
 
 2-15 [CGTN在德获许可几无可能 在欧传播依然畅通](/articles/dw/1043878.md)
-
-2-15 [杜特尔特要求美国大兵“拿钱过来！”](/articles/dw/1043879.md)
 
