--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+3-5 [两会看点与价值今何在](/articles/voa/1042432.md)
+
 3-5 [无国界记者：中国在新冠病毒大流行期间加紧骚扰外国记者](/articles/voa/1042433.md)
 
 3-5 [国务院宣布本年度国际妇女勇气奖获奖者名单 中国维权律师王宇将受表彰](/articles/voa/1042434.md)
@@ -598,6 +600,4 @@
 2-23 [英国谴责中国在新疆对人权进行“工业化规模”的践踏](/articles/voa/1042730.md)
 
 2-23 [被提名为美司法部长的加兰德誓言彻底调查冲击国会事件](/articles/voa/1042731.md)
-
-2-23 [众院委员会通过拜登1.9万亿美国救援计划 里面都有啥？](/articles/voa/1042732.md)
 
