--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-5 [两会：又见增长目标](/articles/voa/1042430.md)
+
+3-5 [江西省宣布全面取消城镇落户限制后的疑问](/articles/voa/1042431.md)
+
 3-5 [两会看点与价值今何在](/articles/voa/1042432.md)
 
 3-5 [无国界记者：中国在新冠病毒大流行期间加紧骚扰外国记者](/articles/voa/1042433.md)
@@ -596,8 +600,4 @@
 2-23 [克鲁兹参议员参加义工活动试图平息度假风波](/articles/voa/1042728.md)
 
 2-23 [白宫要义: 白宫重申联合盟友应对中国 拜登宣布新措施援助美国小企业](/articles/voa/1042729.md)
-
-2-23 [英国谴责中国在新疆对人权进行“工业化规模”的践踏](/articles/voa/1042730.md)
-
-2-23 [被提名为美司法部长的加兰德誓言彻底调查冲击国会事件](/articles/voa/1042731.md)
 
