--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+3-5 [澳大利亚媒体因收到人权组织投诉暂停播放中国官媒节目](/articles/voa/1042427.md)
+
+3-5 [中国军费跨上2000亿美元台阶，目标：尽快缩小与美差距](/articles/voa/1042428.md)
+
 3-5 [四名香港民主派初选案被告周五傍晚获得保释](/articles/voa/1042429.md)
 
 3-5 [两会：又见增长目标](/articles/voa/1042430.md)
@@ -596,8 +600,4 @@
 2-23 [美国务卿布林肯肯定美台共同推动圣卢西亚发展](/articles/voa/1042725.md)
 
 2-23 [加拿大众议院通过动议 认定中国政府压制维吾尔的行为构成种族灭绝](/articles/voa/1042726.md)
-
-2-23 [与美中上演“三国演义”，欧盟新贸易策略强调独立自主](/articles/voa/1042727.md)
-
-2-23 [克鲁兹参议员参加义工活动试图平息度假风波](/articles/voa/1042728.md)
 
