--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+3-5 [中国设定今年经济增长目标6%以上   国防预算增6.8%](/articles/rfa/1046198.md)
+
+3-5 [台湾推“#自由凤梨”运动  多国发订单响应](/articles/rfa/1046199.md)
+
 3-5 [香港民主政制大开倒车    大减直选议席比例](/articles/rfa/1046200.md)
 
 3-5 [李克强涉台强调一中、九二共识 陆委会：捍卫国家主权](/articles/rfa/1046201.md)
@@ -596,8 +600,4 @@
 2-5 [安全港计划第一步  加拿大对香港人开放新工签申请](/articles/rfa/1046496.md)
 
 2-5 [专访袁弓夷：应将中共定性为“跨国犯罪集团”](/articles/rfa/1046497.md)
-
-2-4 [用香港国安法罢免台湾议员？台湾舆论大哗](/articles/rfa/1046498.md)
-
-2-4 [余下任期不到两年 港特首急推多项争议法案为哪般？](/articles/rfa/1046499.md)
 
